--- a/web/src/main/resources/templates/fragments/position-forms.html
+++ b/web/src/main/resources/templates/fragments/position-forms.html
@@ -124,3 +124,11 @@
     <div th:replace="fragments/position-forms  :: submit-cancel"></div>
   </form>
 </div>
+
+<!-- Form for creating an EOI -->
+<div th:fragment="new-eoi-form" xmlns:th="http://www.thymeleaf.org" id="new-eoi-form">
+  <form>
+    <h1>Wassup?</h1>
+  </form>
+</div>
+
