--- a/web/src/main/resources/templates/fragments/studentForm.html
+++ b/web/src/main/resources/templates/fragments/studentForm.html
@@ -5,7 +5,7 @@
         <form
                 id="student-form"
                 class="row g-3 form-border mt-3"
-                th:action="@{/register}"
+                th:action="@{/register-student}"
                 method="post">
             <div class="form-icon center mt-3">
                 <span><i class="icon icon-user"></i></span>
@@ -57,7 +57,7 @@
                 <label for="studentId" class="form-label">CQU Student ID</label>
                 <input type="text" class="form-control" id="studentId" aria-describedby="studentId">
             </div>
-            <div class="form-group mbb-3 text-center">
+            <div class="form-group mb-3 text-center">
                 <button type="submit" class="btn form-button">Register</button>
             </div>
         </form>
