--- a/web/src/main/resources/templates/fragments/studentForm.html
+++ b/web/src/main/resources/templates/fragments/studentForm.html
@@ -5,8 +5,9 @@
         <form
                 id="student-form"
                 class="row g-3 form-border mt-3"
-                th:action="@{/register-student}"
-                method="post">
+                th:action="@{/register}"
+                method="post"
+                th:object="${userDTO}">
             <div class="form-icon center mt-3">
                 <span><i class="icon icon-user"></i></span>
             </div>
@@ -14,39 +15,39 @@
             <div class="col-12"></div>
             <div class="col-md-5 ms-5 m-3">
                 <label for="studentUsername" class="form-label">Username</label>
-                <input type="text" class="form-control" id="studentUsername" aria-describedby="studentUsername">
+                <input type="text" th:field="*{username}" class="form-control" id="studentUsername" aria-describedby="studentUsername">
             </div>
             <div class="col-md-6"></div>
             <div class="col-5 ms-5 me-3">
                 <label for="studentEmail" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="studentEmail" aria-describedby="studentEmail">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                <input type="email" th:field="*{email}"class="form-control" id="studentEmail" aria-describedby="studentEmail">
+                <small id="emailHelp"  class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="col-5 ms-5 m-3">
                 <label for="studentPassword" class="form-label">Password</label>
-                <input type="password" class="form-control" id="studentPassword" aria-describedby="studentPassword">
+                <input type="password" th:field="*{password}" class="form-control" id="studentPassword" aria-describedby="studentPassword">
                 <small id="passwordHelp" class="form-text text-muted">
                     Must be 8-20 characters long.
                 </small>
             </div>
             <div class="col-md-5 ms-5 m-3">
                 <label for="studentFirstName" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="studentFirstName" aria-describedby="studentFirstName">
+                <input type="text" th:field="*{firstName}"class="form-control" id="studentFirstName" aria-describedby="studentFirstName">
             </div>
 
             <div class="col-md-5 ms-5 m-3">
                 <label for="studentLastName" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="studentLastName" aria-describedby="studentLastName">
+                <input type="text" th:field="*{lastName}" class="form-control" id="studentLastName" aria-describedby="studentLastName">
             </div>
             <div class="col-md-3 ms-5 m-3">
                 <label for="studentPhone" class="form-label">Contact Number</label>
-                <input type="text" class="form-control" id="studentPhone" aria-describedby="studentPhone">
+                <input type="text" th:field="*{contactNumber}" class="form-control" id="studentPhone" aria-describedby="studentPhone">
             </div>
 
             <div class="col-md-4 ms-5 m-3">
                 <label for="studentDiscipline" class="form-label">Discipline</label>
-                <select class="form-select" id="studentDiscipline" aria-label="studentDiscipline">
-                    <option selected>Select...</option>
+                <select class="form-select" th:field="*{discipline}" id="studentDiscipline" aria-label="studentDiscipline">
+                    <option selected value="">Select...</option>
                     <option value="Software Development">Software Development</option>
                     <option value="Networking">Networking</option>
                     <option value="Business Analysis">Business Analysis</option>
@@ -55,7 +56,7 @@
             </div>
             <div class="col-md-2 ms-5 m-3">
                 <label for="studentId" class="form-label">CQU Student ID</label>
-                <input type="text" class="form-control" id="studentId" aria-describedby="studentId">
+                <input type="text" th:field="*{studentId}"class="form-control" id="studentId" aria-describedby="studentId">
             </div>
             <div class="form-group mb-3 text-center">
                 <button type="submit" class="btn form-button">Register</button>
