--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -425,6 +425,7 @@
                     <div class="mx-auto">
                         <!-- link passes position type as a request param to dynamically load the edit page -->
                         <!-- NB will need to pass id as well -->
+                        <a th:if="${pla.completed} == true AND ${pla.review} == null" th:href="@{~/partner/add-review?type=Placement&id={pid}( pid=${pla.id} )}" class="btn btn-primary" >Review</a>
                         <a th:href="@{~/partner/edit-position?type=Placement&id={pid}( pid=${pla.id} )}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
                         <span class="material-symbols-rounded btn-delete">delete</span>
                     </div>
