--- a/web/src/main/resources/templates/partner/add-review.html
+++ b/web/src/main/resources/templates/partner/add-review.html
@@ -22,7 +22,7 @@
 
             <h1 class="text-center m-3" th:text="'Review ' + ${type} + ': ' + ${id}">Title</h1>
 
-            <!-- Edit position forms -->
+            <!-- Add Review forms -->
             <div id="add-review-forms">
                 <div  th:insert="fragments/review-forms  :: add-review-form"></div>
             </div>
