updated date field to format for date input and retrieval from db

--- a/web/src/main/resources/templates/fragments/position-forms.html
+++ b/web/src/main/resources/templates/fragments/position-forms.html
@@ -96,7 +96,7 @@
   </div>
   <div class="row p-3 pt-0">
     <label for="eoi-date" class="form-label">Date</label>
-    <input class="form-floating user-input" id="eoi-date" th:field="*{date}">
+    <input type="date" class="form-floating user-input" id="eoi-date" th:field="*{date}">
   </div>
 </div>
 
