--- a/web/src/main/resources/templates/fragments/position-forms.html
+++ b/web/src/main/resources/templates/fragments/position-forms.html
@@ -107,7 +107,7 @@
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="eoiFilledCheck" th:field="*{filled}">
         <label class="form-check-label" for="eoiFilledCheck">
-          Completed
+          Filled
         </label>
       </div>
     </div>
