--- a/web/src/main/resources/templates/fragments/position-forms.html
+++ b/web/src/main/resources/templates/fragments/position-forms.html
@@ -118,7 +118,7 @@
 <div th:fragment="submit-cancel" xmlns:th="http://www.thymeleaf.org">
     <div class="form-group mb-3 text-center">
       <button type="submit" class="btn form-button btn-success">Submit</button>
-      <a class="btn form-button btn-danger" th:href="@{/partner/marketplace}">Cancel</a>
+      <input class="btn form-button btn-danger" type="button" value="Cancel" onclick="window.history.go(-1); return false;">
     </div>
 </div>
 
