--- a/web/src/main/resources/templates/educator/marketplace.html
+++ b/web/src/main/resources/templates/educator/marketplace.html
@@ -26,6 +26,7 @@
 
                 <div th:replace="fragments/marketplace-tables :: approved"></div>
 
+                <div th:replace="fragments/marketplace-tables :: pending-review"></div>
             </div>
         </div>
     </div>
